[package]
name = "pathtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = "0.21.0"
num-traits = "0.2.15"
rand = "0.8.5"
rfd = "0.11.1"
